# DungeonGen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  amplify.yml  docker-compose.yml  package-lock.json  upload-env.sh
amplify/: Pipfile  team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
amplify/backend/api/dungen/: cli-inputs.json
amplify/backend/function/dungeongen7bea1f1c/: Dockerfile  Pipfile  dungeongen7bea1f1c-cloudformation-template.json
amplify/backend/function/dungeongen7bea1f1c/src/: app.py  app_lambda.py  fastapi_app.py  generate_password_hash.py  index.py  lambda_handler.py  pyproject.toml  utils.py
amplify/backend/function/dungeongen7bea1f1c/src/api/auth/: fastapi_router.py  models.py  router.py  utils.py
amplify/backend/function/dungeongen7bea1f1c/src/api/generate/: __init__.py  fastapi_router.py  models.py  router.py
amplify/backend/function/dungeongen7bea1f1c/src/dungeon_core/dungeon/generators/: base.py  postprocess.py
amplify/backend/function/dungeongen7bea1f1c/src/dungeon_core/dungeon/generators/content/: __init__.py  _allocator.py  _core.py
amplify/backend/function/dungeongen7bea1f1c/src/dungeon_core/dungeon/generators/content/_global_planner/: __init__.py  _balance.py  _boss.py  _core.py  _monsters.py  _name_generator.py  _traps.py  _treasure.py
amplify/backend/function/dungeongen7bea1f1c/src/dungeon_core/dungeon/generators/content/_per_room/: __init__.py  _chain.py
amplify/backend/function/dungeongen7bea1f1c/src/dungeon_core/dungeon/generators/layout/: __init__.py  poisson_disc.py  spring_layout.py
amplify/backend/function/dungeongen7bea1f1c/src/models/: dungeon.py
amplify/backend/types/: amplify-dependent-resources-ref.d.ts
backend/: .dockerignore  API_DOCUMENTATION.md  ARCHITECTURE_PLAN.md  Dockerfile  Dockerfile.lambda  README.md  app.py  app_lambda.py  deploy-lambda.sh  generate_password_hash.py  lambda_handler.py  pyproject.toml  requirements-lambda.txt  serverless.yml  template.yaml  test_corridor_fix.py  utils.py
backend/api/: docs.py
backend/api/auth/: router.py  utils.py
backend/api/chat/: __init__.py  models.py  router.py
backend/api/generate/: __init__.py  models.py  router.py
backend/models/: __init__.py  dungeon.py
backend/src/dungeon/: __init__.py  chat_generator.py  generator.py  utils.py
backend/src/dungeon/generators/: __init__.py  base.py  content.py  layout.py  postprocess.py
backend/src/dungeon/generators/content/: __init__.py  _allocator.py  _chain.py  _core.py  _prompt_builder.py  _sampler.py
backend/src/dungeon/generators/content/_global_planner/: _balance.py  _boss.py  _core.py  _monsters.py  _name_generator.py  _traps.py  _treasure.py
backend/src/dungeon/generators/content/_per_room/: _chain.py  _load_json.py  _prompt_builder.py
backend/src/dungeon/generators/layout/: base.py  hallway_sampler.py  poisson_disc.py  spring_layout.py
frontend/: STYLE_GUIDE.md  package-lock.json  vite.config.js
frontend/src/: App.jsx  main.jsx  test-dungeon-data.js  tracing.js
frontend/src/auth/: AuthContext.jsx  README.md  index.js
frontend/src/auth/components/: AuthGuard.jsx  LoginPage.jsx  LogoutButton.jsx
frontend/src/auth/hooks/: useAuth.js
frontend/src/components/: DungeonGrid.jsx  ErrorBanner.jsx  README.md  RoomContentPanel.jsx
frontend/src/models/: DungeonModels.js
